# reportal

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SPEC-tab-color.md  clippy.toml  dist-workspace.toml
.claude/ai-lab/agent-boomerang/boomerangs/master/: 2026-04-15-0249-workspaces-vscode-integration.json  latest.json
.github/workflows/: release.yml
installer/: install.ps1  install.sh  stage_dist_installers.py
src/: error.rs  main.rs  reportal_config.rs  system_executable_lookup.rs  terminal_style.rs
src/cli_args/: ai_args.rs  ai_arguments.rs  color_args.rs  color_arguments.rs  edit_args.rs  edit_arguments.rs  init_args.rs  initialize_arguments.rs  jump_args.rs  jump_arguments.rs  list_args.rs  list_arguments.rs  mod.rs  open_args.rs  open_arguments.rs  prompt_arguments.rs  remove_args.rs  remove_arguments.rs  repo_selection_args.rs  reportal_cli.rs  repository_selection_arguments.rs  run_args.rs  run_arguments.rs  status_args.rs  status_arguments.rs  sync_args.rs  sync_arguments.rs  tag_filter_args.rs  tag_filter_arguments.rs  web_args.rs  web_arguments.rs  workspace_args.rs  workspace_arguments.rs  workspace_filter_args.rs  workspace_filter_arguments.rs
src/code_workspace/: code_workspace_file.rs  code_workspace_folder_entry.rs  folder_parsing.rs  mod.rs
src/commands/: initialization.rs  mod.rs  repo_add.rs  repo_jump.rs  repo_listing.rs  repo_open.rs  repo_remove.rs
src/reportal_commands/: color_command_mode.rs  detected_shell.rs  direct_alias_router.rs  doctor.rs  git_commands.rs  initialization.rs  integration_freshness.rs  mod.rs  path_display.rs  prompt_badge_emit.rs  prompt_identity.rs  prompts.rs  repo_add.rs  repo_ai.rs  repo_color.rs  repo_edit.rs  repo_edit_mutator.rs  repo_jump.rs  repo_listing.rs  repo_listing_renderer.rs  repo_open.rs  repo_remove.rs  repo_run.rs  repo_selection.rs  repo_status.rs  repo_sync.rs  repo_tree_grouping.rs  repo_tree_workspace_section.rs  repo_web.rs  repository_color.rs  shell_alias_emit.rs  shell_integration.rs  shell_integration_autowire.rs  shell_prompt_badge.rs  target_selection.rs  terminal_identity_emit.rs  workspace_create.rs  workspace_delete.rs  workspace_dispatch.rs  workspace_jump.rs  (+8 more)
src/reportal_commands/prompts/: color_edit_prompt.rs  color_edit_result.rs  color_prompt.rs  mod.rs  text_prompt.rs
src/reportal_commands/repo_add/: add_source.rs  alias_suggestion.rs  clone_destination.rs  clone_placement.rs  git_clone_operation.rs  git_remote_detection.rs  mod.rs  registration_context.rs  run.rs
src/reportal_config/: ai_tool_entry.rs  alias_collision_query.rs  command_entry.rs  global_settings.rs  has_aliases.rs  hex_color.rs  mod.rs  repo_color.rs  repo_entry.rs  repo_registration_builder.rs  reportal_config_root.rs  repository_color.rs  shell_alias_export.rs  tab_title.rs  tag_filter.rs  workspace_entry.rs  workspace_filter.rs  workspace_member.rs  workspace_registration_builder.rs
