[package]
name = "reportal"
version = "0.1.0"
edition = "2021"
description = "A fast, cross-platform CLI tool for navigating and managing your development repositories"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
owo-colors = "4"
comfy-table = "7"
console = "0.15"
dirs = "5"
thiserror = "2"
anyhow = "1"
shellexpand = "3"

[[bin]]
name = "reportal"
path = "src/main.rs"

[[bin]]
name = "rep"
path = "src/main.rs"
