[package]
name = "reportal"
version = "0.3.3"
edition = "2021"
description = "A fast, cross-platform CLI for jumping between, opening, and managing your dev repos"
license = "MIT"
repository = "https://github.com/CheckPickerUpper/reportal"
homepage = "https://github.com/CheckPickerUpper/reportal"
readme = "README.md"
keywords = ["cli", "developer-tools", "git", "repository", "productivity"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
owo-colors = "4"
comfy-table = "7"
console = "0.15"
dirs = "5"
thiserror = "2"
anyhow = "1"
shellexpand = "3"
pathdiff = "0.2"

[lints.clippy]
allow_attributes_without_reason = "warn"

[[bin]]
name = "reportal"
path = "src/main.rs"

[[bin]]
name = "rep"
path = "src/main.rs"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
